Fix overflow on kitchen tools page

--- a/app/assets/stylesheets/kitchen_tools.scss
+++ b/app/assets/stylesheets/kitchen_tools.scss
@@ -20,6 +20,7 @@
 }
 
 .kitchen-tools-text {
+  overflow: scroll;
   width: 50%;
   height: 100%;
   display: inline-block;
